@@ -159,7 +159,41 @@ name|udf
 operator|.
 name|generic
 operator|.
+name|GenericUDAFResolver
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|udf
+operator|.
+name|generic
+operator|.
 name|GenericUDF
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|ReflectionUtils
 import|;
 end_import
 
@@ -440,6 +474,45 @@ name|UDAF
 argument_list|>
 operator|)
 name|udfClass
+argument_list|)
+expr_stmt|;
+return|return
+literal|0
+return|;
+block|}
+elseif|else
+if|if
+condition|(
+name|GenericUDAFResolver
+operator|.
+name|class
+operator|.
+name|isAssignableFrom
+argument_list|(
+name|udfClass
+argument_list|)
+condition|)
+block|{
+name|FunctionRegistry
+operator|.
+name|registerGenericUDAF
+argument_list|(
+name|createFunctionDesc
+operator|.
+name|getFunctionName
+argument_list|()
+argument_list|,
+operator|(
+name|GenericUDAFResolver
+operator|)
+name|ReflectionUtils
+operator|.
+name|newInstance
+argument_list|(
+name|udfClass
+argument_list|,
+literal|null
+argument_list|)
 argument_list|)
 expr_stmt|;
 return|return
